--- a/kantong_ilmu/android/app/src/main/AndroidManifest.xml
+++ b/kantong_ilmu/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="kantongilmu"
+        android:label="kantong Ilmu"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
