--- a/kantong_ilmu/pubspec.yaml
+++ b/kantong_ilmu/pubspec.yaml
@@ -23,11 +23,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_spinkit: ^4.1.2+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  cloud_firestore: ^0.13.7
+  firebase_auth: ^0.16.1
+  flushbar: ^1.10.4
+  flutter_spinkit: ^4.1.2+1
+  font_awesome_flutter: ^8.8.1
+  provider: ^4.1.3
+  string_validator: ^0.1.4
+
+
 
 dev_dependencies:
   flutter_test:
