--- a/kantong_ilmu/pubspec.yaml
+++ b/kantong_ilmu/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   font_awesome_flutter: ^8.8.1
   provider: ^4.1.3
   string_validator: ^0.1.4
+#  extended_nested_scroll_view: ^1.0.0
 
 
 
