--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   cloud_firestore: ^0.13.7
   firebase_auth: ^0.16.1
+  flappy_search_bar: ^1.7.2
   flushbar: ^1.10.4
   flutter_spinkit: ^4.1.2+1
   font_awesome_flutter: ^8.8.1
