--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,12 @@ dependencies:
   font_awesome_flutter: ^8.8.1
   provider: ^4.1.3
   string_validator: ^0.1.4
+  intl: ^0.16.1
+  cached_network_image: ^2.2.0+1
+  charts_flutter: ^0.9.0
+  chewie: ^0.9.10
+  flutter_rating_bar: ^3.0.1+1
+  file_picker: ^1.13.3
 #  extended_nested_scroll_view: ^1.0.0
 
 
